<resources>
    <string name="app_name">Java Learn Lab</string>
    <string name="menu_text_header">Выберите тему</string>
    <string name="text_start">Начать тест</string>
    <string name="text_exit">Кнопка для выхода в меню</string>
    <string name="label_topic1">Структура программы</string>
    <string name="topic1_theory_text1_1">\t\t\t\tОсновной строительный блок программы на Java — инструкция (statement). Она выполняет действие: вызов метода, объявление переменной, присвоение значения. Конец инструкции обозначается точкой с запятой (;) — она сигнализирует компилятору об окончании инструкции.</string>
    <string name="topic1_theory_text1_2">\t\t\t\tНапример:</string>
    <string name="topic1_theory_code1">System.out.println(\"Привет,космос!\");</string>
    <string name="topic1_theory_text2_1">\t\t\t\tДанная строка представляет вызов метода System.out.println, который выводит на консоль строку "Привет, космос!". В данном случае вызов метода является инструкцией и поэтому завершается точкой с запятой.</string>
    <string name="topic1_theory_text2_2">\t\t\t\tКроме отдельных инструкций распространенной конструкцией является блок кода. Блок кода содержит набор инструкций, он заключается в фигурные скобки, а инструкции помещаются между открывающей и закрывающей фигурными скобками:</string>
    <string name="topic1_theory_code2">{\nSystem.out.println(\"Привет,космос!\");\n}</string>
    <string name="label_topic2">Выполнение программы. Метод main</string>
    <string name="topic2_theory_text1_1">\t\t\t\tJava является объектно-ориентированным языком, поэтому всю программу можно представить, как набор взаимодействующих между собой классов и объектов. Представьте, что вся программа на Java — это космический флот, а классы и объекты — его составные части.</string>
    <string name="topic2_theory_text1_2">\t\t\t\tОснову программы на Java составляет класс (например, Program) — это как чертёж космического корабля. Он описывает, из чего состоит корабль, какие у него системы и что он умеет делать. Сам по себе чертёж никуда не летит — это просто описание. Его объявление выглядит так:</string>
    <string name="topic2_theory_code1">public class Program {\n\t\t// содержимое класса\n}</string>
    <string name="topic2_theory_text2_1">\t\t\t\tpublic — модификатор доступа: класс доступен извне (в т.ч. для запуска из командной строки);</string>
    <string name="topic2_theory_text2_2">\t\t\t\tclass — ключевое слово для объявления класса;</string>
    <string name="topic2_theory_text2_3">\t\t\t\tProgram — имя класса.</string>
    <string name="topic2_theory_text3_1">\t\t\t\tВходная точка программы — метод main. Он обязательно должен присутствовать, иначе программа не запустится. Виртуальная машина Java ищет именно этот метод и запускает его при старте приложения.</string>
    <string name="topic2_theory_text3_2">\t\t\t\tОбъявление метода main:</string>
    <string name="topic2_theory_code2">public static void main(String[] args) {\n\t\t// инструкции, которые требуются при запуске\n}</string>
    <string name="topic2_theory_text4_1">\t\t\t\tЧто означает каждая часть:</string>
    <string name="topic2_theory_text4_2">\t\t\t\tpublic — метод доступен извне;</string>
    <string name="topic2_theory_text4_3">\t\t\t\tstatic — метод принадлежит классу, а не объекту (его можно вызвать без создания экземпляра класса);</string>
    <string name="topic2_theory_text4_4">\t\t\t\tvoid — метод не возвращает значения;</string>
    <string name="topic2_theory_text4_5">\t\t\t\tmain — имя метода (фиксированное, нельзя изменить);</string>
    <string name="topic2_theory_text4_6">\t\t\t\tString[] args — параметр: массив строк, через который можно передать данные в программу при запуске (например, из командной строки);</string>
    <string name="topic2_theory_text4_7">\t\t\t\t{ ... } — блок кода с инструкциями, которые выполняются при запуске программы.</string>
    <string name="topic2_theory_text5_1">\t\t\t\tПолная конструкция:</string>
    <string name="topic2_theory_code3">public class Main {\n\t\tpublic static void main(String[] args) {\n\t\t\t\tSystem.out.println(\"Привет, космос!\");\n\t\t}\n}</string>
    <string name="label_topic3">Консольный ввод/вывод в Java</string>
    <string name="topic3_theory_text1_1">\t\t\t\tДля взаимодействия с консолью в Java применяется класс System, а его функциональность, собственно, обеспечивает консольный ввод и вывод.</string>
    <string name="topic3_theory_text1_2">\t\t\t\tВывод на консоль</string>
    <string name="topic3_theory_text1_3">\t\t\t\tДля создания потока вывода в класс System определен объект out. В этом объекте определен метод print, который позволяет вывести на консоль некоторое значение. Например:</string>
    <string name="topic3_theory_code1">public class Main {\n\t\t    public static void main(String[] args) {\n\t\t\t\t        System.out.print(\"В полёт, дружок!\");\n\t\t    }\n}</string>
    <string name="topic3_theory_text2_1">\t\t\t\tВывод программы:</string>
    <string name="topic3_theory_code2">В полёт, дружок!</string>
    <string name="topic3_theory_text2_2">\t\t\t\tПри необходимости вывести на консоль некоторое значение с последующим переводом курсора консоли на следующую строку, используют метод System.out.println();. Например:</string>
    <string name="topic3_theory_code3">public class Main {\n\t\t    public static void main(String[] args) {\n\t\t\t\t        System.out.println(\"Стоит ракета на старте,\");\n\t\t\t\t        System.out.println(\"Готова к большой игре.\");\n\t\t\t\t        System.out.println(\"Зажжётся огонёк ---\");\n\t\t\t\t        System.out.println(\"В полёт, дружок!\");\n\t\t    }\n}</string>
    <string name="topic3_theory_text3_1">\t\t\t\tВывод программы:</string>
    <string name="topic3_theory_code4">Стоит ракета на старте,\nГотова к большой игре.\nЗажжётся огонёк ---\nВ полёт, дружок!</string>
    <string name="topic3_theory_text3_2">\t\t\t\tНо с помощью метода System.out.print также можно осуществить переход на новую строку, для этого нужно включить в строку символ \n. Например:</string>
    <string name="topic3_theory_code5">public class Main {\n\t\t    public static void main(String[] args) {\n\t\t\t\t        System.out.print(\"Стоит ракета на старте,\\n\");\n\t\t\t\t        System.out.print(\"Готова к большой игре.\\n\");\n\t\t\t\t        System.out.print(\"Зажжётся огонёк ---\\n\");\n\t\t\t\t        System.out.print(\"В полёт, дружок!\\n\");\n\t\t    }\n}</string>
    <string name="topic3_theory_text4_1">\t\t\t\tНередко необходимо выводить в строку данные. Например, у нас есть два числа, и необходимо вывести их значения на экран. В этом случае мы можем, написать так:</string>
    <string name="topic3_theory_code6">public class Main {\n\t\t    public static void main(String[] args) {\n\t\t\t\t        int x=5;\n\t\t\t\t        int y=6;\n\t\t\t\t       System.out.print(\"x=\" + x + \"; y=\" + y);\n\t\t    }\n}</string>
    <string name="topic3_theory_text4_2">\t\t\t\tВывод программы:</string>
    <string name="topic3_theory_code7">x=5; y=6</string>
    <string name="topic3_theory_text4_3">\t\t\t\tТакже в Java есть функция для форматированного вывода: System.out.printf(). С ее помощью мы можем переписать предыдущий пример следующим образом:</string>
    <string name="topic3_theory_code8">public class Main {\n\t\t    public static void main(String[] args) {\n\t\t\t\t        int x=5;\n\t\t\t\t        int y=6;\n\t\t\t\t        System.out.printf(\"x=%d; y=%d \\n\", x, y);\n\t\t    }\n}</string>
    <string name="topic3_theory_text5_1">\t\t\t\tВ данном случае символы %d обозначают спецификатор, вместо которого подставляет один из аргументов. Спецификаторов и соответствующих им аргументов может быть множество. Кроме спецификатора %d мы можем использовать еще ряд спецификаторов для других типов данных:</string>
    <string name="topic3_theory_text5_2">\t\t\t\t• %x: для вывода шестнадцатеричных чисел</string>
    <string name="topic3_theory_text5_3">\t\t\t\t• %f: для вывода чисел с плавающей точкой</string>
    <string name="topic3_theory_text5_4">\t\t\t\t• %e: для вывода чисел в экспоненциальной форме, например, 1.3e+01</string>
    <string name="topic3_theory_text5_5">\t\t\t\t• %c: для вывода одиночного символа</string>
    <string name="topic3_theory_text5_6">\t\t\t\t• %s: для вывода строковых значений</string>
    <string name="topic3_theory_text5_7">\t\t\t\tНапример:</string>
    <string name="topic3_theory_code9">public class Main {\n\t\t    public static void main(String[] args) {\n\t\t\t\t        String planet = \"Jupiter\";\n\t\t \t\t       int number = 5;\n\t\t \t\t       System.out.printf(\"Planet: %s Number: %d \\n\", planet, number);\n\t\t    }\n}</string>
    <string name="topic3_theory_text6_1">\t\t\t\tВывод программы:</string>
    <string name="topic3_theory_code10">Planet: Jupiter Number: 5</string>
    <string name="topic3_theory_text6_2">\t\t\t\tПри выводе чисел с плавающей точкой мы можем указать количество знаков после запятой, для этого используем спецификатор на %.2f, где .2 указывает, что после запятой будет два знака.</string>
    <string name="topic3_theory_text7_1">\t\t\t\tВвод с консоли</string>
    <string name="topic3_theory_text7_2">\t\t\t\tДля получения ввода с консоли используют класс Scanner, который, в свою очередь использует System.in. Например, напишем маленькую программу, которая осуществляет ввод чисел:</string>
    <string name="topic3_theory_code11">import java.util.Scanner;\n\npublic class Main {\n\t\t    public static void main(String[] args) {\n\t\t\t\t        Scanner in = new Scanner(System.in);\n\t\t \t\t       System.out.print(\"Введи любую цифру: \");\n\t\t    \t\t    int num = in.nextInt();\n\t\t\t\t        System.out.printf(\"Ваша цифра: %d \\n\", num);\n\t\t    }\n}</string>
    <string name="topic3_theory_text8_1">\t\t\t\tВывод программы:</string>
    <string name="topic3_theory_code12">Введи любую цифру: 3\nВаша цифра: 3</string>
    <string name="topic3_theory_text8_2">\t\t\t\tТак как класс Scanner находится в пакете java.util, то мы вначале его импортируем с помощью инструкции import java.util.Scanner. Для создания самого объекта Scanner в его конструктор передается объект System.in. После этого мы можем получать вводимые значения.</string>
    <string name="topic3_theory_text9_1">\t\t\t\tКласс Scanner имеет еще ряд методов, которые позволяют получить введенные пользователем значения:</string>
    <string name="topic3_theory_text9_2">\t\t\t\t• next(): считывает введенную строку до первого пробела</string>
    <string name="topic3_theory_text9_3">\t\t\t\t• nextLine(): считывает всю введенную строку</string>
    <string name="topic3_theory_text9_4">\t\t\t\t• nextInt(): считывает введенное число int</string>
    <string name="topic3_theory_text9_5">\t\t\t\t• nextDouble(): считывает введенное число double</string>
    <string name="topic3_theory_text9_6">\t\t\t\t• nextBoolean(): считывает значение boolean</string>
    <string name="topic3_theory_text9_7">\t\t\t\t• nextByte(): считывает введенное число byte</string>
    <string name="topic3_theory_text9_8">\t\t\t\t• nextFloat(): считывает введенное число float</string>
    <string name="topic3_theory_text9_9">\t\t\t\t• nextShort(): считывает введенное число short</string>
    <string name="label_topic4">Переменные и константы</string>
    <string name="topic4_theory_text1_1">\t\t\t\tДля хранения данных в программе предназначены переменные. Переменная представляет именованную область памяти, которая хранит значение определенного типа.</string>
    <string name="label_topic5">Типы данных</string>
    <string name="label_topic6">Условные конструкции</string>
    <string name="label_topic7">Циклы</string>
    <string name="label_topic8">Массивы. Одномерный массив</string>
    <string name="label_topic9">Массивы. Двумерный массив</string>
</resources>