<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/menu_bg"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/menu_text_header"
        android:textSize="32sp"
        android:textColor="@color/main_menu_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="64dp"
        android:background="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/topic_1"
                style="@style/main_menu_button"
                android:text="@string/label_topic1"
                />

            <Button
                android:id="@+id/topic_2"
                android:text="@string/label_topic2"
                style="@style/main_menu_button"
                />

            <Button
                android:id="@+id/topic_3"
                android:text="@string/label_topic3"
                style="@style/main_menu_button"
                />

            <Button
                android:id="@+id/topic_4"
                android:text="@string/label_topic4"
                style="@style/main_menu_button"
                />

            <Button
                android:id="@+id/topic_5"
                android:text="@string/label_topic5"
                style="@style/main_menu_button"
                />

            <Button
                android:id="@+id/topic_6"
                android:text="@string/label_topic6"
                style="@style/main_menu_button"
                 />

            <Button
                android:id="@+id/topic_7"
                android:text="@string/label_topic7"
                style="@style/main_menu_button"
                />

            <Button
                android:id="@+id/topic_8"
                android:text="@string/label_topic8"
                style="@style/main_menu_button"
                />

            <Button
                android:id="@+id/topic_9"
                android:text="@string/label_topic9"
                style="@style/main_menu_button"
                />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>